--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-firestore:23.0.4'
     implementation 'org.jetbrains:annotations:22.0.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
     //Room
     dependencies {
