--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,30 @@ android {
 
 dependencies {
 
+    //bcrypt
+    implementation "org.mindrot:jbcrypt:0.4"
+
+    implementation 'com.auth0.android:jwtdecode:2.0.0'
+
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.0'
+    implementation 'io.vertx:vertx-core:4.2.0.Beta1'
+
+    //retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+
+    //gson
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+
+    implementation 'com.squareup.retrofit2:converter-jackson:2.5.0'
+
+
+    //jackson
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.0'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.13.0'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.13.0'
+
+
+
     implementation platform('com.google.firebase:firebase-bom:28.4.0')
     implementation 'com.google.firebase:firebase-analytics'
 
