--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,6 +81,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:23.0.4'
     implementation 'org.jetbrains:annotations:22.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.android.gms:play-services-maps:17.0.1'
 
     //Room
     dependencies {
