--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,12 +76,13 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-storage:20.0.0'
     implementation 'com.google.firebase:firebase-auth:21.0.1'
-    implementation 'androidx.browser:browser:1.3.0'
+    implementation 'androidx.browser:browser:1.4.0'
 
-    implementation 'com.google.firebase:firebase-firestore:23.0.4'
+    implementation 'com.google.firebase:firebase-firestore:24.0.0'
     implementation 'org.jetbrains:annotations:22.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.google.android.gms:play-services-maps:17.0.1'
+    implementation 'com.google.android.gms:play-services-maps:18.0.0'
+    implementation 'androidx.lifecycle:lifecycle-service:2.4.0'
 
     //Room
     dependencies {
@@ -105,6 +106,8 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation 'me.relex:circleindicator:2.1.6'
+    implementation 'com.makeramen:roundedimageview:2.3.0'
+
 
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
